--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,13 +8,11 @@
 }
 
 header h1{
-   
     color: #e53170;
     text-align: center;
     padding-top: 15px;
-
-   
 }
+
 
 .container{
     width: 80%;
@@ -25,3 +23,41 @@ main p{
     text-align: center;
     padding: 25px;
 }
+
+.clearfix::after{
+    clear: both;
+    display: table;
+    content: "";
+}
+
+.cards{
+    float: left;
+    width: calc(100% / 3);
+    text-align: left;
+    margin-top: 10px;
+    
+    padding: 10px;
+
+}
+
+img{
+    height: 80px;
+    float: left;
+    padding-right: 10px;
+     
+}
+
+.text-cards{
+    background-color: #0f0e17;
+    color: white;
+    font-size: smaller;
+    padding-right: 60px;
+    width: 100%;
+    height: 80px;
+    box-shadow: 5px 4px 18px #e53170;
+}
+
+.blue-text{
+    color: #0851aa;
+}
+
